--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "bootstrap": "^5.2.3",
     "nuxt": "^3.3.1",
     "pug": "^3.0.2",
     "sass": "^1.59.3"
